<?xml version="1.0" encoding="utf-8"?>
<layout>

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="Add Wallet"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_net_assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_net_assets"
            android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_liability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_liability"
            android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/wallet_text_color"
          android:textAppearance="@style/TextPrimaryAppearance"/>

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_color"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="16dp"/>

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>
  </LinearLayout>
</layout>
